bugfix - terms of use and privacy policy urls

--- a/Collections/Theme Helpers/Theme-Content-Copyright.html
+++ b/Collections/Theme Helpers/Theme-Content-Copyright.html
@@ -1,1 +1,1 @@
-<div>© Copyright {year}. All rights reserved. <a href="/termsofuse/" hidefocus="true" style="outline: none;">Terms of Use</a>&nbsp;|&nbsp;<a href="/privacy-policy/" hidefocus="true" style="outline: none;">Privacy Policy</a></div>
+<div>© Copyright {year}. All rights reserved. <a href="/terms-of-use" hidefocus="true" style="outline: none;">Terms of Use</a>&nbsp;|&nbsp;<a href="/privacy-policy" hidefocus="true" style="outline: none;">Privacy Policy</a></div>
